--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
+  email: "thanh10973@gmail.com"
   facebook: bu1th4nh.127
   github: bu1th4nh
 #  reddit: yourname
