--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ social-network-links:
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-  instagram: 
+  instagram: __bu1th4nh 
 #  youtube: user/deanat78
 #  spotify: yourname
 #  telephone: +14159998888
