--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,10 @@ title: bu1th4nh's website
 
 # List of links in the navigation bar
 navbar-links:
+  
   About Me: ""
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
-
+  Đếm ngược 30 năm CTB: "/countdown-ctb"
+  
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/img/avatar-icon.png"
