--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: bu1th4nh's website
 navbar-links:
   
   About Me: ""
-  Đếm ngược 30 năm CTB: "/countdown-ctb"
+  Đếm ngược 30 năm CTB: "https://bu1th4nh.github.io/countdown-ctb/"
   
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
