--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ avatar: "/img/avatar-icon.png"
 # --- Background colour/image options --- #
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
-navbar-col: "#bad4ff"
+navbar-col: "#a5bfd8"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#bad4ff"
+footer-col: "#a5bfd8"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
