--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ avatar: "/img/avatar-icon.png"
 navbar-col: "#a5bfd8"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
+page-col: "#bed2e5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#a5bfd8"
