--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,11 @@ title: bu1th4nh's website
 # List of links in the navigation bar
 navbar-links:
   
+  
+  Computer Science: ""
+  Arduinos: ""
+  Tản mạn: ""
   About Me: ""
-  Đếm ngược 30 năm CTB: "https://bu1th4nh.github.io/countdown-ctb/"
   
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
