--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
   
   Computer Science: ""
   Arduinos: ""
-  Tản mạn: ""
+  Tản mạn: "tản_mạn"
   About Me: "aboutme"
   
 # Image to show in the navigation bar - image must be a square (width = height)
