--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: bu1th4nh's website
+title: bu1th4nh's Stuff
 
 # Short description of your site
 
@@ -26,7 +26,6 @@ navbar-links:
   
   
   Computer Science: ""
-  Arduinos: ""
   Tản mạn: "tản_mạn"
   About Me: "aboutme"
   
